# SimpleSourcePackageManager

./: .gitignore  README.md
SimpleSourcePackageManager/: SimpleSourcePackageManager.py
cpacman/: CLIEnvFactory.py  CLIMain.py  PackageManager.py  cpacman
cpacman/CLIEnv/: Installer.py  SimpleCLI.py
example/DummyLib/: CMakeLists.txt  package.json
example/DummyLib/cfg/: DummyLib_cfg.h
example/DummyLib/include/: DummyLib.h
example/DummyLib/src/: DummyLib.c
example/dummyProject/: CMakeLists.txt  main.c  package.json  readme.md
